--- a/addtask.html
+++ b/addtask.html
@@ -24,15 +24,15 @@
     <form onsubmit="addTask(); return false">
 
       <div class="left">
-        <label class="font20" for="title">Title</label>
+        <label class="font20 label" for="title">Title</label>
         <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border ol-none cursor-p" type="text"
           placeholder="Enter a title">
 
-        <label class="font20" for="description">Description</label>
+        <label class="font20 label" for="description">Description</label>
         <textarea required class="w-422 font20 pad-18-21 custom-border ol-none cursor-p" name="description"
           id="description-input" cols="30" rows="10" placeholder="Enter a Description"></textarea>
 
-        <label class="font20" for="category">Category</label>
+        <label class="font20 label" for="category">Category</label>
         <div onclick="toggleCatgoryMenu()" class="category-container font20" id="category-container">
           <div class="category-input cursor-p" id="category-input">
             <span>Select task category</span>
@@ -53,7 +53,7 @@
         <div class="d-none" id="hidden-error"><p class="font12 hidden-error">You need to pick a color</p></div>
 
 
-        <label class="font20" for="assigned">Assigned to</label>
+        <label class="font20 label" for="assigned">Assigned to</label>
         <div onclick="toggleAssigndMenu()" class="assigned-container font20 cursor-p" id="assigned-container">
           <div class="assigned-input" id="assigned-input">
             <span>Select contacts to assign</span>
@@ -76,11 +76,11 @@
         </svg>
       </div>
       <div class="right">
-        <label required class="font20 date-label" for="date">Due date</label>
+        <label required class="font20 date-label label" for="date">Due date</label>
         <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date" min=""
           placeholder="dd/mm/yyyy">
 
-        <label class="font20" for="prio">Prio</label>
+        <label class="font20 label" for="prio">Prio</label>
         <div class="prio-btn">
           <button id="urgentBtn" onclick="getTaskPrio(this, 'urgent')"
             class="font20 pad-18-10 urgent-btn custom-border shadow prioBtn" type="button">Urgent<img id="urgentImg"
@@ -94,7 +94,7 @@
         </div>
 
 
-        <label class="font20" for="subtasks">Subtasks</label>
+        <label class="font20 label" for="subtasks">Subtasks</label>
 
 
 
