--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="./scripts/bootstrap.js"></script>
     <script src="./scripts/storage.js"></script>
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>JOIN</title>
   </head>
   <body onload="init();">
