closing dialog in resposive

--- a/contacts.html
+++ b/contacts.html
@@ -33,7 +33,7 @@
   <div w3-include-html="./templates/sidebar.html"></div>
 
   <!-- Edit Contact -->
-  <dialog id="dialog__editContact">
+  <dialog open id="dialog__editContact">
     <div class="dialog__editLeftSide">
       <img src="./img/logo_white.svg" alt="White Join Logo" />
       <h2>Edit contact</h2>
@@ -60,7 +60,7 @@
     </div>
   </dialog>
   <!-- Add new Contact -->
-  <dialog id="dialog__createContact">
+  <dialog open id="dialog__createContact">
     <div class="dialog__createLeftSide">
       <img src="./img/logo_white.svg" alt="White Join Logo" />
       <h2>Add contact</h2>
