fixed close.svg + added addTask animation

--- a/board.html
+++ b/board.html
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div
-            onclick="boardOpenDialog()"
+            onclick="addTaskWindow('open')"
             class="addTaskBoardBtn bold px-2 py-2 ms-4 cursorPointer"
           >
             Add task +
