--- a/board.html
+++ b/board.html
@@ -46,6 +46,7 @@
     <script src="./scripts/board.js"></script>
     <script src="./scripts/summary.js"></script>
     <script src="./scripts/sidebar.js"></script>
+    <!-- <script src="./scripts/addtask.js"></script> -->
     <script src="./scripts/animations.js"></script>
     <script src="./scripts/bootstrap.js"></script>
 
