--- a/board.html
+++ b/board.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="./styles/board.css" />
     <script src="./scripts/storage.js"></script>
     <script src="./scripts/board.js"></script>
-    <script src="./scripts/summary.js"></script>
+    <!-- <script src="./scripts/summary.js"></script> -->
     <script src="./scripts/sidebar.js"></script>
     <!-- <script src="./scripts/addtask.js"></script> -->
     <script src="./scripts/animations.js"></script>
