fixed moving tasks

--- a/board.html
+++ b/board.html
@@ -42,13 +42,13 @@
     <link rel="stylesheet" href="./styles/summary.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/board.css" />
-    <script src="./scripts/storage.js"></script>
-    <script src="./scripts/board.js"></script>
-    <script src="./scripts/summary.js"></script>
-    <script src="./scripts/sidebar.js"></script>
+    <script defer src="./scripts/storage.js"></script>
+    <script defer src="./scripts/board.js"></script>
+    <script defer src="./scripts/summary.js"></script>
+    <script defer src="./scripts/sidebar.js"></script>
     <!-- <script src="./scripts/addtask.js"></script> -->
-    <script src="./scripts/animations.js"></script>
-    <script src="./scripts/bootstrap.js"></script>
+    <script defer src="./scripts/animations.js"></script>
+    <script defer src="./scripts/bootstrap.js"></script>
 
     <title>Board</title>
   </head>
@@ -97,7 +97,7 @@
             </div>
           </div>
           <div
-            ondrop="moveTo('todo')"
+            ondrop="moveTo('to do')"
             ondragover="allowDrop(event)"
             id="todo"
           ></div>
