fixed some error

--- a/board.html
+++ b/board.html
@@ -45,7 +45,7 @@
 
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/board.js"></script>
-    <script defer src="./scripts/summary.js"></script>
+    <!-- <script defer src="./scripts/summary.js"></script> -->
     <script defer src="./scripts/sidebar.js"></script>
     <!-- <script src="./scripts/addtask.js"></script> -->
     <script defer src="./scripts/animations.js"></script>
