--- a/board.html
+++ b/board.html
@@ -44,11 +44,11 @@
     <link rel="stylesheet" href="./styles/board.css" />
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/board.js"></script>
-    <script defer src="./scripts/summary.js"></script>
+     <!-- <script defer src="./scripts/summary.js"></script> -->
     <script defer src="./scripts/sidebar.js"></script>
     <!-- <script src="./scripts/addtask.js"></script> -->
     <script defer src="./scripts/animations.js"></script>
-    ??<script defer src="./scripts/bootstrap.js"></script>
+    <script defer src="./scripts/bootstrap.js"></script>
 
     <title>Board</title>
   </head>
