--- a/board.html
+++ b/board.html
@@ -42,13 +42,14 @@
     <link rel="stylesheet" href="./styles/summary.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/board.css" />
+
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/board.js"></script>
     <!-- <script defer src="./scripts/summary.js"></script> -->
     <script defer src="./scripts/sidebar.js"></script>
     <!-- <script src="./scripts/addtask.js"></script> -->
     <script defer src="./scripts/animations.js"></script>
-    ??<script defer src="./scripts/bootstrap.js"></script>
+    <script defer src="./scripts/bootstrap.js"></script>
 
     <title>Board</title>
   </head>
@@ -97,9 +98,11 @@
             </div>
           </div>
           <div
-            ondrop="moveTo('to do')"
-            ondragover="allowDrop(event)"
+            ondrop="moveTo('to do', this)"
+            ondragover="allowDrop(event, this)"
+            ondragleave="leaveDropArea(this)"
             id="todo"
+            status="to do"
           ></div>
         </div>
         <div>
@@ -110,9 +113,11 @@
             </div>
           </div>
           <div
-            ondrop="moveTo('in progress')"
-            ondragover="allowDrop(event)"
+            ondrop="moveTo('in progress', this)"
+            ondragover="allowDrop(event, this)"
+            ondragleave="leaveDropArea(this)"
             id="inProgress"
+            status="in progress"
           ></div>
         </div>
         <div>
@@ -123,17 +128,21 @@
             </div>
           </div>
           <div
-            ondrop="moveTo('awaiting feedback')"
-            ondragover="allowDrop(event)"
+            ondrop="moveTo('awaiting feedback', this)"
+            ondragover="allowDrop(event, this)"
+            ondragleave="leaveDropArea(this)"
             id="awaitingFeedback"
+            status="awaiting feedback"
           ></div>
         </div>
         <div>
           <div class="bold">Done</div>
           <div
-            ondrop="moveTo('done')"
-            ondragover="allowDrop(event)"
+            ondrop="moveTo('done', this)"
+            ondragover="allowDrop(event, this)"
+            ondragleave="leaveDropArea(this)"
             id="done"
+            status="done"
           ></div>
         </div>
       </div>
