fixed zindex colorpicker

--- a/board.html
+++ b/board.html
@@ -35,24 +35,21 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <!-- FAVICON END -->
-    <link rel="stylesheet" href="./styles/bootstrap.css" />
-    <script
-      type="text/javascript"
-      defer
-      src="./scripts/coloris.min.js"
-    ></script>
+
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/taskstyle.css" />
     <link rel="stylesheet" href="./styles/styleSidebar.css" />
     <link rel="stylesheet" href="./styles/summary.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/coloris.min.css" />
+    <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/board.css" />
 
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/board.js"></script>
     <!-- <script defer src="./scripts/summary.js"></script> -->
     <script defer src="./scripts/sidebar.js"></script>
+    <script defer src="./scripts/coloris.min.js"></script>
     <script src="./scripts/addtask.js"></script>
     <script defer src="./scripts/animations.js"></script>
     <script defer src="./scripts/bootstrap.js"></script>
@@ -371,7 +368,5 @@
         </div>
       </div>
     </div>
-    <!-- <dialog modal w3-include-html="./templates/addTaskTemplate.html" id="boardOpenDialog" open>
-    </dialog> -->
   </body>
 </html>
