--- a/addtask.html
+++ b/addtask.html
@@ -21,7 +21,7 @@
   <div class="add-task-section">
     <h1 class="font61">Add Task</h1>
 
-    <form action="board.html" onsubmit="addTask(); return false">
+    <form onsubmit="addTask(); return false">
 
       <div class="left">
         <label class="font20 label" for="title">Title</label>
