--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
         <span>Not a JOIN user?</span>
         <button class="signup-btn" onclick="showSignup();">Sign up</button>
       </div>
+      <footer class="footer-container">
+        <a>Privacy Policy</a>
+        <a>Legal Notice</a>
+      </footer>
     </main>
 
     <script src="./scripts/login.js"></script>
