--- a/summary.html
+++ b/summary.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- FAVICON -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="/img/favicon/site.webmanifest" />
-    <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="mask-icon"
+      href="/img/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="msapplication-config" content="/img/favicon/browserconfig.xml" />
+    <meta
+      name="msapplication-config"
+      content="/img/favicon/browserconfig.xml"
+    />
     <meta name="theme-color" content="#ffffff" />
     <!-- FAVICON END -->
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="./styles/styleSidebar.css">
-    <link rel="stylesheet" href="./styles/summary.css">
+    <link rel="stylesheet" href="./styles/styleSidebar.css" />
+    <link rel="stylesheet" href="./styles/summary.css" />
     <link rel="stylesheet" href="/styles/index.css" />
     <script src="./scripts/summary.js"></script>
     <script src="./scripts/sidebar.js"></script>
@@ -26,113 +46,112 @@
     <script src="scripts/storage.js"></script>
 
     <title>Summary</title>
+  </head>
 
-</head>
-
-<body onload="includeHTML(); initSummary()">
+  <body onload="includeHTML(); initSummary()">
     <div w3-include-html="./templates/sidebar.html"></div>
     <div class="parentDiv flex-column">
-        <div class="pb-3 d-flex align-items-center">
-            <div class="size3Em bold pe-4 border-end border-3 borderColorBlue">Summary</div>
-            <div class="size2Em ps-4">Everythings a nutshell!</div>
+      <div class="pb-3 d-flex align-items-center headline-container">
+        <div class="size3Em bold pe-4 border-end border-3 borderColorBlue">
+          Summary
         </div>
-        <div class="childDiv">
-
-            <div class="firstContainer">
-
-                <div class="item-1">
-                    <div
-                        class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center">
-                        <div id="task-count" class="size3Em bold"></div>
-                        <div>
-                            <div class="noWrapWords">Tasks in</div>
-                            <div>Board</div>
-                        </div>
-                    </div>
-                    <div
-                        class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center">
-                        <div id="progress-count" class="size3Em bold"></div>
-                        <div>
-                            <div class="noWrapWords">Tasks in</div>
-                            <div>Progress</div>
-                        </div>
-                    </div>
-                    <div
-                        class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center">
-                        <div id="feedback-count" class="size3Em bold"></div>
-                        <div>
-                            <div>Awaiting</div>
-                            <div>Feedback</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="bgWhite border py-3 rounded-5 item-2">
-                    <div class="border-end border-3 d-flex justify-content-center">
-                        <div class="d-flex align-items-center">
-                            <img src="./img/prio_urgent.svg" alt="urgent">
-                        </div>
-                        <div class="d-flex flex-column align-items-center justify-content-center text-center ps-3">
-                            <div class="size3Em bold" id="urgent-count">
-
-                            </div>
-                            <div>
-                                Urgent
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center">
-                        <div id="urgent-deadline" class="bold pb-2 text-center">
-
-                        </div>
-                        <div class="size08Em text-center">
-                            Upcoming Deadline
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item-3">
-                    <div onmouseover="whitePencil()" onmouseout="darkPencil()"
-                        class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center">
-                        <div class="d-flex align-items-center">
-                            <img id="pencil" src="./img/icon_pencil.svg" alt="pencil">
-                        </div>
-                        <div class="d-flex flex-column align-items-center justify-content-center ps-3">
-                            <div class="size3Em bold" id="todo-count">
-
-                            </div>
-                            <div class="noWrapWords">
-                                To-do
-                            </div>
-                        </div>
-                    </div>
-                    <div onmouseover="whiteOk()" onmouseout="darkOk()"
-                        class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center">
-                        <div class="d-flex align-items-center">
-                            <img id="ok" src="./img/icon_ok.svg" alt="ok">
-                        </div>
-                        <div class="d-flex flex-column align-items-center justify-content-center ps-3">
-                            <div class="size3Em bold" id="done-count">
-
-                            </div>
-                            <div>
-                                Done
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="size2Em ps-4 headline-nutshell">
+          Everything in a nutshell!
+        </div>
+      </div>
+      <div class="childDiv">
+        <div class="firstContainer">
+          <div class="item-1">
+            <div
+              class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center"
+            >
+              <div id="task-count" class="size3Em bold"></div>
+              <div>
+                <div class="noWrapWords">Tasks in</div>
+                <div>Board</div>
+              </div>
             </div>
-
-            <div class="secondContainer ps-5">
-                <div>
-                    <div id="whichHour" class="size2Em">Good morning,</div>
-                    <div class="size3Em bold fontColorBlue" id="welcome-user">Sofia Müller</div>
-                </div>
+            <div
+              class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center"
+            >
+              <div id="progress-count" class="size3Em bold"></div>
+              <div>
+                <div class="noWrapWords">Tasks in</div>
+                <div>Progress</div>
+              </div>
             </div>
+            <div
+              class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center"
+            >
+              <div id="feedback-count" class="size3Em bold"></div>
+              <div>
+                <div>Awaiting</div>
+                <div>Feedback</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="bgWhite border py-3 rounded-5 item-2">
+            <div class="border-end border-3 d-flex justify-content-center">
+              <div class="d-flex align-items-center">
+                <img src="./img/prio_urgent.svg" alt="urgent" />
+              </div>
+              <div
+                class="d-flex flex-column align-items-center justify-content-center text-center ps-3"
+              >
+                <div class="size3Em bold" id="urgent-count"></div>
+                <div>Urgent</div>
+              </div>
+            </div>
+            <div class="d-flex flex-column justify-content-center">
+              <div id="urgent-deadline" class="bold pb-2 text-center"></div>
+              <div class="size08Em text-center">Upcoming Deadline</div>
+            </div>
+          </div>
+
+          <div class="item-3">
+            <div
+              onmouseover="whitePencil()"
+              onmouseout="darkPencil()"
+              class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center"
+            >
+              <div class="d-flex align-items-center">
+                <img id="pencil" src="./img/icon_pencil.svg" alt="pencil" />
+              </div>
+              <div
+                class="d-flex flex-column align-items-center justify-content-center ps-3"
+              >
+                <div class="size3Em bold" id="todo-count"></div>
+                <div class="noWrapWords">To-do</div>
+              </div>
+            </div>
+            <div
+              onmouseover="whiteOk()"
+              onmouseout="darkOk()"
+              class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center"
+            >
+              <div class="d-flex align-items-center">
+                <img id="ok" src="./img/icon_ok.svg" alt="ok" />
+              </div>
+              <div
+                class="d-flex flex-column align-items-center justify-content-center ps-3"
+              >
+                <div class="size3Em bold" id="done-count"></div>
+                <div>Done</div>
+              </div>
+            </div>
+          </div>
         </div>
 
+        <div class="secondContainer ps-5">
+          <div>
+            <div id="whichHour" class="size2Em">Good morning,</div>
+            <div class="size3Em bold fontColorBlue" id="welcome-user">
+              Sofia Müller
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
