--- a/summary.html
+++ b/summary.html
@@ -51,13 +51,11 @@
   <body onload="includeHTML(); initSummary()">
     <div w3-include-html="./templates/sidebar.html"></div>
     <div class="parentDiv flex-column">
-      <div class="pb-3 d-flex align-items-center headline-container">
+      <div class="pb-3 headline-container">
         <div class="size3Em bold pe-4 border-end border-3 borderColorBlue">
           Summary
         </div>
-        <div class="size2Em ps-4 headline-nutshell">
-          Everything in a nutshell!
-        </div>
+        <div class="size2Em headline-nutshell">Everything in a nutshell!</div>
       </div>
       <div class="childDiv">
         <div class="firstContainer">
