summary responsive final

--- a/summary.html
+++ b/summary.html
@@ -52,10 +52,13 @@
     <div w3-include-html="./templates/sidebar.html"></div>
     <div class="parentDiv flex-column">
       <div class="pb-3 headline-container">
-        <div class="size3Em bold pe-4 border-end border-3 borderColorBlue">
+        <div
+          class="size3Em bold pe-4 border-3 borderColorBlue summaryHeadlineText"
+        >
           Summary
         </div>
         <div class="size2Em headline-nutshell">Everything in a nutshell!</div>
+        <span class="blue-line"></span>
       </div>
       <div class="childDiv">
         <div class="firstContainer">
