--- a/board.html
+++ b/board.html
@@ -61,9 +61,18 @@
       class="dNone popUpBoardBackground display-flex justify-content-center align-items-center"
     ></div>
     <div class="parentDiv paddingRight50Px">
-      <div class="d-flex justify-content-between mb-5">
-        <div class="size3Em bold">Board</div>
-        <div class="d-flex align-items-center">
+      <div class="d-flex justify-content-between mb-5 headline-container-board">
+        <div class="size3Em bold headlineBoard">
+          Board
+          <img
+            src="./img/plus_add_task_board_mobile.svg"
+            alt="Add a Task on Mobile Device"
+            onclick="openModal(document.querySelector('.modal'))"
+            class="mobileAddTask"
+          />
+        </div>
+
+        <div class="d-flex align-items-center boardSearchBox">
           <div
             class="border ps-3 py-1 findTaskBtn d-flex justify-content-between align-items-center"
           >
@@ -92,7 +101,7 @@
       <div class="gridContainerChildBoard">
         <div>
           <div class="d-flex justify-content-between">
-            <div class="bold">To do</div>
+            <div class="bold boardCategoryHeadline">To do</div>
             <div class="cursorPointer">
               <img src="./img/plusButton.svg" alt="plus" />
             </div>
@@ -101,13 +110,14 @@
             ondrop="moveTo('to do', this)"
             ondragover="allowDrop(event, this)"
             ondragleave="leaveDropArea(this)"
+            class="dropArea"
             id="todo"
             status="to do"
           ></div>
         </div>
         <div>
           <div class="d-flex justify-content-between">
-            <div class="bold">In Progress</div>
+            <div class="bold boardCategoryHeadline">In Progress</div>
             <div class="cursorPointer">
               <img src="./img/plusButton.svg" alt="plus" />
             </div>
@@ -116,13 +126,14 @@
             ondrop="moveTo('in progress', this)"
             ondragover="allowDrop(event, this)"
             ondragleave="leaveDropArea(this)"
+            class="dropArea"
             id="inProgress"
             status="in progress"
           ></div>
         </div>
         <div>
           <div class="d-flex justify-content-between">
-            <div class="bold">Awaiting Feedback</div>
+            <div class="bold boardCategoryHeadline">Awaiting Feedback</div>
             <div class="cursorPointer">
               <img src="./img/plusButton.svg" alt="plus" />
             </div>
@@ -131,16 +142,18 @@
             ondrop="moveTo('awaiting feedback', this)"
             ondragover="allowDrop(event, this)"
             ondragleave="leaveDropArea(this)"
+            class="dropArea"
             id="awaitingFeedback"
             status="awaiting feedback"
           ></div>
         </div>
         <div>
-          <div class="bold">Done</div>
+          <div class="bold boardCategoryHeadline">Done</div>
           <div
             ondrop="moveTo('done', this)"
             ondragover="allowDrop(event, this)"
             ondragleave="leaveDropArea(this)"
+            class="dropArea"
             id="done"
             status="done"
           ></div>
